--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div id="root">
         <h1>{{message}}</h1>
-        <button @click="show">{{buttonMessage}}</button>
+        <button @click="show">{{buttonMessage}} </button>
+        <span>Hai fatto {{counter}} click!</span>
         <img :class="dNone" :src="img">
-
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
